# palmOilFruitCounting

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  MASTER-PLAN.md  README.md  SUGGESTIONS.md  analyze_labels.py  augment.py  cropper.py  cropper_plan.md  dataAnnotation.py  filter_config.json  main_tool.py  plan.md  pyproject.toml  requirements.txt  sam_annotator.py  test_filter.py  test_filter_rgb.py  version_info.txt  visualize_annotations.py
.github/workflows/: python-package.yml
configs/: annotator_config.yaml  filter_config.yaml  train.yaml
dataset/: README.md
gui_tools/: __init__.py  annotator.py  cropper.py
notebook/: 01-auto-annotate.ipynb  02-model-training.ipynb
scripts/: annotate.py  crop.py  dataset.py  review.py
src/palm_oil_counting/: __init__.py
src/palm_oil_counting/analysis/: sam3_analysis.py
src/palm_oil_counting/annotation/: __init__.py  hsv_annotator.py  sam3_annotator.py  sam_annotator.py
src/palm_oil_counting/gui/: __init__.py  annotator.py  cropper.py
src/palm_oil_counting/preprocessing/: __init__.py  augment.py
src/palm_oil_counting/utils/: __init__.py  coco_format.py  visualization.py  yolo_format.py
tests/: __init__.py  test_filter.py  test_yolo_format.py
